--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.0",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
