--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "formik": "^2.4.5",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
