--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^2.1.0",
     "formik": "^2.4.5",
-    "next": "14.1.0",
+    "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "react": "^18",
