--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.8",
     "formik": "^2.4.5",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
