--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
+    "@mui/x-data-grid": "^7.0.0",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
